--- a/PanIQVideoPlayer_V2/Client/Client.csproj
+++ b/PanIQVideoPlayer_V2/Client/Client.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>ClientForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Client.Program.cs" />
+    <Compile Include="Command_Runner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ClientForm.resx">
       <DependentUpon>ClientForm.cs</DependentUpon>
