rename and refactor

--- a/PanIQVideoPlayer_V2/Server/Client Master.csproj
+++ b/PanIQVideoPlayer_V2/Server/Client Master.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0531AD5D-13C2-43A0-886D-5D23A1EB815A}</ProjectGuid>
+    <ProjectGuid>{B6CC087B-87D5-402C-A356-5D3D8ADCD384}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Client</RootNamespace>
-    <AssemblyName>Client</AssemblyName>
+    <RootNamespace>Server</RootNamespace>
+    <AssemblyName>Server</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -49,17 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientForm.cs">
+    <Compile Include="ClientMasterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ClientForm.Designer.cs">
-      <DependentUpon>ClientForm.cs</DependentUpon>
+    <Compile Include="ClientMasterForm.Designer.cs">
+      <DependentUpon>ClientMasterForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Client.Program.cs" />
-    <Compile Include="Command_Runner.cs" />
+    <Compile Include="ClientMaster.Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ClientForm.resx">
-      <DependentUpon>ClientForm.cs</DependentUpon>
+    <EmbeddedResource Include="ClientMasterForm.resx">
+      <DependentUpon>ClientMasterForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
