--- a/PanIQVideoPlayer_V2/Server/Client Master.csproj
+++ b/PanIQVideoPlayer_V2/Server/Client Master.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>ClientMasterForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ClientMaster.Program.cs" />
+    <Compile Include="Command_Runner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ClientMasterForm.resx">
       <DependentUpon>ClientMasterForm.cs</DependentUpon>
