added custom button script

--- a/PanIQVideoPlayer_V2/Server/Client Master.csproj
+++ b/PanIQVideoPlayer_V2/Server/Client Master.csproj
@@ -58,6 +58,9 @@
     <Compile Include="ClientMaster.Program.cs" />
     <Compile Include="Command_Runner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundedButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="ClientMasterForm.resx">
       <DependentUpon>ClientMasterForm.cs</DependentUpon>
     </EmbeddedResource>
